[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
test = true

[[bin]]
name = "day2"
test = true

[[bin]]
name = "day3"
test = true

[[bin]]
name = "day4"
test = true

[dependencies]
